# git-account-manager

./: .gitignore  .versionrc.json  CHANGELOG.md  CONTRIBUTING.md  README.md  commitlint.config.js  index.html  package.json  pnpm-lock.yaml
.github/workflows/: build.yml
scripts/: cargo-lock-updater.cjs  cargo-toml-updater.cjs
src/: App.tsx  copySshPublicKey.ts  main.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: git.rs  lib.rs  models.rs  oauth.rs  openssh_integration.rs  platform.rs  secrets.rs  ssh.rs  storage.rs
src-tauri/windows/: nsis-hooks.nsh  wix-uninstall-icon.wxs
src/components/: ProfileCard.tsx  ProfileForm.tsx  SettingsPage.tsx  UpdateBanner.tsx
src/i18n/: de.ts  en.ts  es.ts  fr.ts  index.tsx  ja.ts  ko.ts  pt-BR.ts  ru.ts  uk.ts  zh-Hans.ts  zh-Hant.ts
