[package]
name = "git-account-manager"
version = "0.1.6"
description = "A cross-platform desktop app for managing Git profiles. Switch your Git identity, SSH config, and connected accounts in one click."
authors = ["https://github.com/khasky"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "git_account_manager_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
dirs = "6"
keyring-core = "1"
uuid = { version = "1", features = ["v4"] }
sha2 = "0.10"
base64 = "0.22"
open = "5"
urlencoding = "2"
tokio = { version = "1", features = ["rt"] }
hostname = "0.4"
tauri-plugin-autostart = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-process = "2"

[target.'cfg(windows)'.dependencies]
winreg = "0.55"
windows-native-keyring-store = "1"

[target.'cfg(target_os = "macos")'.dependencies]
apple-native-keyring-store = { version = "1", default-features = false, features = ["keychain"] }

[target.'cfg(target_os = "linux")'.dependencies]
zbus-secret-service-keyring-store = { version = "1", default-features = false, features = ["rt-tokio-crypto-rust"] }

# Desktop-only: these plugins do not build for mobile targets.
[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"
tauri-plugin-single-instance = "2"
